<package format="2">
  <name>vrpn_catkin</name>
  <version>0.0.0</version>
  <description>vrpn_catkin</description>
  <maintainer email="gohlp@ethz.ch">Pascal Gohl</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
